# Contract_intelligence

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  load_dataset.ipynb  main.py  pyproject.toml  render.yaml
.github/workflows/: deploy-frontend.yml  keepalive.yml
api/: analyze.py  models.py  router.py  status.py  upload.py
core/: celery_app.py  config.py  ocr_engine.py  redis_client.py  vector_db.py
extraction/: docx_extractor.py  extractor.py  image_extractor.py  pdf_extractor.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: ChatBox.tsx  Explorer.tsx  Header.tsx  Sidebar.tsx  UploadZone.tsx
ingestion/: file_manager.py
models/: groq_llm.py  qa_pipeline.py
pipeline/: document_pipeline.py
processing/: chunker.py
tasks/: pipeline_tasks.py
