[project]
name = "week1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "fastapi[standard]>=0.136.1",
    "gevent>=26.4.0",
    "ipykernel>=7.2.0",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.27",
    "redis>=7.4.0",
]
