[project]
name = "week1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "fastapi[standard]>=0.136.1",
    "gevent>=26.4.0",
    "ipykernel>=7.2.0",
    "setuptools",
    "paddlepaddle-gpu>=2.6.0",
    "paddleocr>=2.8.0",
    "pymupdf>=1.24.0",
    "numpy>=1.24.0",
    "langdetect>=1.0.9",
    "pillow>=12.2.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.27",
    "redis>=7.4.0",
    "transformers>=5.8.0",
]


[tool.setuptools.packages.find]
include = [
    "api*",
    "core*",
    "extraction*",
    "ingestion*",
    "pipeline*",
    "processing*",
    "tasks*",
]
